--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "extract-text-webpack-plugin": "^2.0.0",
     "fastclick": "^1.0.6",
     "file-loader": "^0.10.0",
+    "file-saver": "^1.3.3",
     "friendly-errors-webpack-plugin": "^1.1.3",
     "function-bind": "^1.1.0",
     "html-webpack-plugin": "^2.28.0",
@@ -87,7 +88,8 @@
     "webpack-dashboard": "^1.0.0-2",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.16.1",
-    "webpack-merge": "^2.6.1"
+    "webpack-merge": "^2.6.1",
+    "xlsx": "^0.12.4"
   },
   "engines": {
     "node": ">= 4.0.0",
